test/fails/bad_functions/overloading2.lgl
tag a is vec2;
tag b is vec2;

declare a f(a x);
declare b f(b x);

void main() {
    print f([1., 2.]) // SHENANIGANS!
    return;
}